# et-pmbm

./: .gitmodules  CMakeLists.txt  README.md  rapid_failure_test.sh
images/: test_tracker.gif:Zone.Identifier
include/: constants.h
include/simulator/: Simulator.h  Target.h  constants.h
include/tracker/: Bernoulli.h  Detection.h  DetectionGroup.h  ExtentModel.h  Group.h  Hypothesis.h  KinematicModel.h  PoissonPointProcess.h  Preprocessing.h  Tracker.h  constants.h  utils.h
include/validation/: Evaluation.h  ValidationModel.h  Visualization.h  constants.h  settings.h
src/: digamma_root.cpp  main.cpp  monte_carlo_scenario_1.cpp  test_bernoulli.cpp  test_detection_group.cpp  test_distribution_merging.cpp  test_dynamic_ppp.cpp  test_gating.cpp  test_multi_bernoulli_mixture.cpp  test_ppp.cpp  test_tracker.cpp
src/simulator/: Simulator.cpp  Target.cpp
src/tracker/: Bernoulli.cpp  Detection.cpp  DetectionGroup.cpp  ExtentModel.cpp  Group.cpp  Hypothesis.cpp  KinematicModel.cpp  PoissonPointProcess.cpp  Preprocessing.cpp  Tracker.cpp  utils.cpp
src/validation/: Evaluation.cpp  ValidationModel.cpp  Visualization.cpp
test/: main.cpp  monte_carlo_scenario_1.cpp  monte_carlo_scenario_2.cpp  monte_carlo_scenario_3.cpp  test_bernoulli.cpp  test_detection_group.cpp  test_distribution_merging.cpp  test_ppp.cpp  test_tracker.cpp
